--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/hiteshchoudhary/apihub#readme",
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@supabase/supabase-js": "^2.45.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
