--- a/examples/apps/chat-app/web/react-vite-tailwind/package.json
+++ b/examples/apps/chat-app/web/react-vite-tailwind/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "socket.io-client": "^4.7.2",
+
     "axios": "^1.6.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "socket.io-client": "^4.7.2"
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
